[gd_scene load_steps=13 format=3 uid="uid://b47bnqrqbal76"]

[ext_resource type="Script" uid="uid://dnbaxjdjgdo1y" path="res://catto_ball/catto_ball.gd" id="1_2pr5t"]
[ext_resource type="PackedScene" uid="uid://c66n16d6cb6px" path="res://catto_ball/cat_-_ps1_low_poly_rigged.glb" id="2_2pr5t"]
[ext_resource type="Material" uid="uid://ci23js8fnh5s6" path="res://catto_ball/ball_texture.tres" id="3_xtgf7"]
[ext_resource type="Script" uid="uid://c3gigxpsu5ocl" path="res://catto_ball/camera_rig.gd" id="4_6tnqt"]
[ext_resource type="Script" uid="uid://2l7g5out26mh" path="res://catto_ball/camera_yaw.gd" id="4_835n4"]
[ext_resource type="Script" uid="uid://cx15oox132ddf" path="res://catto_ball/camera_pivot.gd" id="5_nr1fk"]
[ext_resource type="Texture2D" uid="uid://cf0gdrhycve70" path="res://stage/catto_spawner/debug_texture.png" id="7_yxdcm"]
[ext_resource type="PackedScene" uid="uid://ba6kna7olfqme" path="res://catto_ball/cat_model.glb" id="8_aowiq"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_h55qy"]
friction = 0.0
bounce = 0.5
absorbent = true

[sub_resource type="SphereMesh" id="SphereMesh_xtgf7"]
material = ExtResource("3_xtgf7")

[sub_resource type="SphereShape3D" id="SphereShape3D_835n4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aowiq"]
albedo_texture = ExtResource("7_yxdcm")

[node name="Catto Ball" type="RigidBody3D" groups=["catto_ball"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_h55qy")
gravity_scale = 2.0
can_sleep = false
continuous_cd = true
script = ExtResource("1_2pr5t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_xtgf7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_835n4")

[node name="Catto" parent="." instance=ExtResource("2_2pr5t")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -0.26252994, 0)
visible = false

[node name="CameraYaw" type="Node3D" parent="."]
script = ExtResource("4_835n4")

[node name="CameraRig" type="Node3D" parent="CameraYaw"]
script = ExtResource("4_6tnqt")

[node name="CameraPivot" type="Node3D" parent="CameraYaw/CameraRig"]
script = ExtResource("5_nr1fk")

[node name="Camera3D" type="Camera3D" parent="CameraYaw/CameraRig/CameraPivot"]
physics_interpolation_mode = 2
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0.5744072, -1.7916647)

[node name="Pickup Location" type="Marker3D" parent="CameraYaw/CameraRig/CameraPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5061917, 2.5989714, -4.9352293)

[node name="CSGSphere3D" type="CSGSphere3D" parent="CameraYaw/CameraRig/CameraPivot/Camera3D/Pickup Location"]
visible = false
radius = 0.1
material = SubResource("StandardMaterial3D_aowiq")

[node name="cat_model" parent="." instance=ExtResource("8_aowiq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3313363, 0.07294093)
